--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -38,6 +38,7 @@
                 <a class="site-nav-url" style="margin-left: -4px;" href="{% url 'items' %}">Items</a>
                 <a class="site-nav-url" style="margin-left: -4px;" href="{% url 'my-offers' %}">Offers</a>
                 <a class="site-nav-url" style="margin-left: -4px;" href="{% url 'my-bids' %}">Bids</a>
+                <a class="site-nav-url" style="margin-left: -4px;" href="{% url 'receipts' %}">Receipts</a>
               </div>
             </div>
             <div class="dropdown">
