Started working on paypal payments, added tests for paypal payment view

--- a/marketapp/listings/templates/receipts/receipts.html
+++ b/marketapp/listings/templates/receipts/receipts.html
@@ -122,7 +122,7 @@
                       Message {{ receipt.owner }}
                     </div>
                   </a>
-                  <a href="">
+                  <a href="{% url 'send-payment' pk=receipt.pk %}">
                     <div class="btn btn-blue">
                       Send Payment
                     </div>
@@ -135,7 +135,7 @@
                       Message {{ receipt.owner }}
                     </div>
                   </a>
-                  <a href="">
+                  <a href="{% url 'send-payment' pk=receipt.pk %}">
                     <div class="btn btn-blue">
                       Send Payment
                     </div>
