--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <script src="https://www.paypal.com/sdk/js?client-id=AeoRBJPyMGHTOi8OmRxKW5IZaB0sf276fAWwELm-XySMnConkjQryyFPFP4wkampSRGcTCs0VV4mW0Sm"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- Ensures optimal rendering on mobile devices. -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" /> <!-- Optimal Internet Explorer compatibility -->
   <!-- Add additional CSS in static file -->
@@ -16,6 +15,7 @@
   <link rel="stylesheet" href="{% static 'font-awesome/css/regular.css' %}">
   <link rel="stylesheet" href="{% static 'font-awesome/css/brands.css' %}">
   <link rel="stylesheet" href="{% static 'font-awesome/css/fontawesome.css' %}">
+  <script type="text/javascript" src="{% static 'js/jquery-3.5.1.js' %}"></script>
 </head>
 <body>
   <div class="container-fluid">
