--- a/marketapp/listings/templates/listings/offer_detail.html
+++ b/marketapp/listings/templates/listings/offer_detail.html
@@ -9,29 +9,32 @@
           {{ offer.owner }}
         </a>
       </h4>
-      {% if offer.amount > 0.00 %}
-        Amount offered: <span class="amount-offered">${{ offer.amount }}</span></br>
-      {% endif %}
     </div>
   </div>
-  {% if offer.items.all.count > 0 %}
-    <div class="container-fluid col-lg-10 center-block">
-      <div class="center-block">
-        <h3 style="text-align: center; margin-bottom: 20px;">Items Offered:</h3>
-        {% for item in offer.items.all %}
-          <div class="item-container col-lg-6 center-block">
-            {% with item.images.all|first as image %}
-              <a href="{{ item.get_absolute_url }}"><img src="{{ image.image.url }}" class="listing-image"></img></a>
-            {% endwith %}
-            <div class="item-details-container">
-              <a href="{{ item.get_absolute_url }}"><h4 style="display: inline-block">{{ item.name }}</h4></a>
-              <div class="item-desc">{{ item.description }}</div>
+  <div class="container-fluid col-lg-10 center-block">
+    {% if offer.amount > 0.00 %}
+      <h3 style="text-align: center;">
+        Amount offered:
+        <span class="amount-offered"><br>${{ offer.amount }}</span>
+      </h3>
+    {% endif %}
+    {% if offer.items.all.count > 0 %}
+        <div class="center-block">
+          <h3 style="text-align: center; margin-bottom: 20px;">Items Offered:</h3>
+          {% for item in offer.items.all %}
+            <div class="item-container col-lg-6 center-block">
+              {% with item.images.all|first as image %}
+                <a href="{{ item.get_absolute_url }}"><img src="{{ image.image.url }}" class="listing-image"></img></a>
+              {% endwith %}
+              <div class="item-details-container">
+                <a href="{{ item.get_absolute_url }}"><h4 style="display: inline-block">{{ item.name }}</h4></a>
+                <div class="item-desc">{{ item.description }}</div>
+              </div>
             </div>
-          </div>
-        {% endfor %}
-      </div>
-    </div>
-  {% endif %}
+          {% endfor %}
+        </div>
+    {% endif %}
+  </div>
   {% if offer.offerListing.owner == request.user and offer.offerListing.listingCompleted != True %}
     {% if offer.offerListing.listingEnded != True %}
       <div class="center-block" style="text-align: center;">
