--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="{% static 'font-awesome/css/brands.css' %}">
   <link rel="stylesheet" href="{% static 'font-awesome/css/fontawesome.css' %}">
   <script type="text/javascript" src="{% static 'js/jquery-3.5.1.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/notifications.js' %}"></script>
 </head>
 <body>
   <div class="container-fluid">
