--- a/marketapp/listings/templates/base_generic.html
+++ b/marketapp/listings/templates/base_generic.html
@@ -22,7 +22,9 @@
   <div class="container-fluid">
     <div class="row site-nav-container">
       <div class="col-md-4 header-title">
-        <a href="{% url 'index' %}"><h2>Market Place Image</h2></a>
+        <a href="{% url 'index' %}">
+          <img src="{% static 'images/listit2.png' %}" style="width: 150px; height: 45px;">
+        </a>
       </div>
         <ul class="col-md-8 site-nav">
           {% if user.is_authenticated %}
@@ -110,7 +112,7 @@
           {% endif %}
         </ul>
     </div>
-    <div class="col-lg-12 page-content">{% block content %}{% endblock %}</div>
+    <div class="page-content">{% block content %}{% endblock %}</div>
   </div>
 </body>
 </html>
