--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -979,3 +979,122 @@ input[type="checkbox"]{
   margin-top: 20px;
   vertical-align: text-top;
 }
+
+.form-button {
+  float: right;
+}
+
+.form-container-sign-up {
+  background: #e8e8e8;
+  padding: 15px;
+  border-radius: 15px;
+  border: 2px solid #999999;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  width: 420px;
+  height: 610px;
+}
+
+.form-field-sign-up {
+  float: right;
+}
+
+.form-container-log-in {
+  background: #e8e8e8;
+  padding: 15px;
+  border-radius: 15px;
+  border: 2px solid #999999;
+  margin-top: 20px;
+  width: 300px;
+  height: 205px;
+}
+
+.form-field-log-in {
+  float: right;
+}
+
+.form-container-images {
+  background: #e8e8e8;
+  padding: 15px;
+  border-radius: 15px;
+  border: 2px solid #999999;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 300px;
+  height: 460px;
+}
+
+.form-field-images {
+  float: right;
+  width: 200px;
+}
+
+.form-container-items {
+  background: #e8e8e8;
+  padding: 15px;
+  border-radius: 15px;
+  border: 2px solid #999999;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 380px;
+  height: 540px;
+}
+
+.form-field-items {
+  float: right;
+}
+
+.image-form-button {
+  margin-top: 20px;
+}
+
+.item-form-button {
+  margin-top: 20px;
+}
+
+.form-container-edit-image {
+  background: #e8e8e8;
+  padding: 15px;
+  border-radius: 15px;
+  border: 2px solid #999999;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 300px;
+  height: 385px;
+}
+
+.image-tag-selection, .item-tag-selection ul {
+  list-style-type: none;
+  padding-left: 5px;
+  padding-bottom: -20px;
+}
+
+.image-tag-selection, .item-tag-selection li {
+  margin: -10px 0px -10px 0px;
+}
+
+.image-tag-selection {
+  display: inline-block;
+  height: 200px;
+  overflow-y: scroll;
+  border: 1px solid grey;
+  padding-left: 0px;
+  padding-top: 10px;
+  padding-right: 5px;
+  background: white;
+}
+
+.image-tag-selection, .item-tag-selection input[type="checkbox"]{
+  width: 15px;
+  height: 15px;
+}
+
+.item-tag-selection {
+  height: 200px;
+  overflow-y: scroll;
+  border: 1px solid grey;
+  padding-left: 0px;
+  padding-top: 10px;
+  padding-right: 5px;
+  background: white;
+}
