--- a/marketapp/listings/templates/items/add_item.html
+++ b/marketapp/listings/templates/items/add_item.html
@@ -1,21 +1,34 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h2>Create Item</h2>
-<form enctype="multipart/form-data" method="post" action="">
-  {% csrf_token %}
-  {% for field in form %}
-    <p>
-      {{ field.label_tag }}
-      {{ field }}
-      {% if field.help_text %}
-        <br><small style="color: grey">{{ field.help_text }}</small>
-      {% endif %}
-      {% for error in field.errors %}
-        <p style="color: red">{{ error }}</p>
-      {% endfor %}
-    </p>
-  {% endfor %}
-  <button type="btn submit" class="btn btn-blue">Create</button>
-</form>
+  <div class="center-block col-lg-10">
+    <h2 style="text-align: center;">Add Item</h2>
+    <div class="form-container-items center-block">
+      <form enctype="multipart/form-data" method="post" action="">
+        {% csrf_token %}
+        {% for field in form %}
+          <p>
+            {% if field.label != "Images" %}
+              <div style="display: inline-block;">
+                {{ field.label_tag }}
+              </div>
+              <div class="form-field-items" style="display: inline-block;">
+                {{ field }}
+              </div>
+              {% if field.help_text %}
+                <br><small style="color: grey">{{ field.help_text }}</small>
+              {% endif %}
+              {% for error in field.errors %}
+                <p style="color: red">{{ error }}</p>
+              {% endfor %}
+            {% else %}
+              <br><div>{{ field.label_tag }}</div>
+              <div class="item-tag-selection">{{ field }}</div>
+            {% endif %}
+          </p>
+        {% endfor %}
+        <button type="btn submit" class="btn btn-blue form-button">Create</button>
+      </form>
+    </div>
+  </div>
 {% endblock %}
