--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -1063,6 +1063,33 @@ input[type="checkbox"]{
   height: 385px;
 }
 
+.form-container-offer-listings {
+  background: #e8e8e8;
+  padding: 15px;
+  border-radius: 15px;
+  border: 2px solid #999999;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 400px;
+  height: 1090px;
+}
+
+.form-container-offer-listings textarea {
+  display: block !important;
+  float: left;
+}
+
+.form-container-offers {
+  background: #e8e8e8;
+  padding: 15px;
+  border-radius: 15px;
+  border: 2px solid #999999;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 400px;
+  height: 480px;
+}
+
 .image-tag-selection, .item-tag-selection ul {
   list-style-type: none;
   padding-left: 5px;
